# DRR-renderer

./: .gitignore  CMakeLists.txt  DRRgenerator.cpp  DRRgenerator.cpp.autosave  DRRgenerator.h  GPUdef.cpp  GPUdef.h  LICENCE  README.md  README.md~  main.cpp  setup.py
Docker/: Dockerfile
src/: CMakeLists.txt  DRRgenerator.h
